--- a/_includes/collection-banner.html
+++ b/_includes/collection-banner.html
@@ -35,7 +35,7 @@
         </div>
         {% unless site.data.theme.featured-image contains '/' %}
         <div class="position-absolute bottom-0 end-0 px-2 bg-dark bg-opacity-75">
-            <a class="text-white fs-6" href="{% unless page.lang == site.site_languages[0]['lang_id'] %}/{{ page.lang }}{% endunless %}{{ site.data.theme.featured-image | prepend: '/item.html?id=' | relative_url }}" title="{{ featuredItem.title | escape }}">{% include translate.html id="home-featured-image" default="Featured Image" %}</a>
+            <a class="text-white fs-6" href="{% if page.lang != site.site_languages[0]['lang_id'] %}{{ site.data.theme.featured-image | prepend: '/item.html?id=' | prepend: page.lang | prepend: '/' | relative_url }}{% else %}{{ site.data.theme.featured-image | prepend: '/item.html?id=' | relative_url }}{% endif %}" title="{{ featuredItem.title | escape }}">{% include translate.html id="home-featured-image" default="Featured Image" %}</a>
         </div>{% endunless %}
     </div>
 </div>
@@ -50,7 +50,7 @@
 <div class="container">
     <div class="row align-items-center">
         <div id="title" class="{% if site.organization-logo-banner %}col-md-9{% else %}col-12{% endif %}">
-            <h1><a class="text-dark font-weight-normal" href="{% unless page.lang == site.site_languages[0]['lang_id'] %}/{{ page.lang }}{% endunless %}{{ site.baseurl }}/" >{% if page.lang == site.site_languages[0]['lang_id'] %}{{ site.title }}{% else %}{{ altLang.lang_site_title }}{% endif %}</a></h1>	 
+            <h1><a class="text-dark font-weight-normal" href="{{ site.baseurl }}/{% unless page.lang == site.site_languages[0]['lang_id'] %}{{ page.lang }}{% endunless %}/" >{% if page.lang == site.site_languages[0]['lang_id'] %}{{ site.title }}{% else %}{{ altLang.lang_site_title }}{% endif %}</a></h1>	 
             {% if site.tagline %}<p>{% if page.lang == site.site_languages[0]['lang_id'] %}{{ site.tagline }}{% else %}{{ altLang.lang_site_tagline }}{% endif %}</p>{% endif %}
         </div>
         {% if site.organization-logo-banner %}
