--- a/_includes/collection-nav.html
+++ b/_includes/collection-nav.html
@@ -18,7 +18,7 @@
                 {% if nav.stub %}
                 {% capture page-stub %}{{ page.lang | prepend: '/' | append: nav.stub }}{% endcapture %}
                 <li class="nav-item">
-                    <a class="nav-link{% if page.lang == site.site_languages[0]['lang_id'] and page.url == nav.stub %} active{% elsif page-url == page-stub %} active{% endif %}" href="{% unless page.lang == site.site_languages[0]['lang_id'] %}/{{ page.lang }}{% endunless %}{{ nav.stub | relative_url }}">{{ site.data.config-translation | where: "translate_id", nav.translate_id_nav | map: page.lang | first }}</a>
+                    <a class="nav-link{% if page.lang == site.site_languages[0]['lang_id'] and page.url == nav.stub %} active{% elsif page-url == page-stub %} active{% endif %}" href="{% if page.lang != site.site_languages[0]['lang_id'] %}{{ nav.stub | prepend: page.lang | prepend: '/' | relative_url }}{% else %}{{ nav.stub | relative_url }}{% endif %}">{{ site.data.config-translation | where: "translate_id", nav.translate_id_nav | map: page.lang | first }}</a>
                 </li>
                 {%- else -%}
                 <li class="nav-item dropdown">
@@ -28,7 +28,7 @@
                     <div class="dropdown-menu">
                         {% for c in navChildren %}
                         {% capture child-stub %}{{ page.lang | prepend: '/' | append: c.stub }}{% endcapture %}
-                        <a class="dropdown-item {% if page.lang == site.site_languages[0]['lang_id'] and page.url == c.stub %} active{% elsif page-url == child-stub %} active{% endif %}" href="{% unless page.lang == site.site_languages[0]['lang_id'] %}/{{ page.lang }}{% endunless %}{{ c.stub | relative_url }}">{{ site.data.config-translation | where: "translate_id", c.translate_id_nav | map: page.lang | first }}</a>
+                        <a class="dropdown-item {% if page.lang == site.site_languages[0]['lang_id'] and page.url == c.stub %} active{% elsif page-url == child-stub %} active{% endif %}" href="{% if page.lang != site.site_languages[0]['lang_id'] %}{{ nav.stub | prepend: page.lang | prepend: '/' | relative_url }}{% else %}{{ c.stub | relative_url }}{% endif %}">{{ site.data.config-translation | where: "translate_id", c.translate_id_nav | map: page.lang | first }}</a>
                         {% endfor %}
                     </div>
                 </li>
